[package]
name = "vector-nexus"
version = "0.1.0"
edition = "2021"
description = "Abstraction layer for multiple vector databases with schema generation and RAG support."
license = "MIT OR Apache-2.0" 
repository = "https://github.com/DevsHero/vector-nexus.git" 
readme = "README.md" 

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] } 
futures = "0.3"
async-trait = "0.1"
log = "0.4"
thiserror = "1.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
qdrant-client = "1.14"
redis = { version = "0.25", default-features = false, features = ["aio", "tokio-comp"] } 
reqwest = { version = "0.12", features = ["json"] } #
